tests/lean/2161.lean.expected.out
2161.lean:15:48-15:54: error: tactic 'decide' failed for proposition
  ((mul 4 1).mul 1).mul 1 = 4
since its 'Decidable' instance did not reduce to 'isTrue' or 'isFalse'.

Instead, after unfolding the instances
  instDecidableEqFoo, Nat.decEq, instDecidableEqNat and decEqFoo✝
it reduced to
  Decidable.rec (fun h => (fun h => isFalse ⋯) h) (fun h => (fun h => h ▸ isTrue ⋯) h)
    (instDecidableEqNat (((mul 4 1).mul 1).mul 1).num 4)
2161.lean:22:48-22:54: error: tactic 'decide' failed for proposition
  ((add 4 1).add 1).add 1 = 4
since its 'Decidable' instance did not reduce to 'isTrue' or 'isFalse'.

Instead, after unfolding the instances
  instDecidableEqFoo, Nat.decEq, instDecidableEqNat and decEqFoo✝
it reduced to
  Decidable.rec (fun h => (fun h => isFalse ⋯) h) (fun h => (fun h => h ▸ isTrue ⋯) h)
    (instDecidableEqNat (((add 4 1).add 1).add 1).num 4)
